fix windows run script to work with Java 17