@@ -1,7 +1,7 @@
 ::BATCH file to windows
-ECHO compiling
+@echo off
 
 set BATDIR=%~dp0
-set LIBDIR="%BATDIR%..\build\libs-all"
+set LIBDIR="%BATDIR%..\build\libs-all\*"
 
-java -Djava.ext.dirs=%LIBDIR% com.beanit.asn1bean.compiler.Compiler %*
+java -cp %LIBDIR% com.beanit.asn1bean.compiler.Compiler %*
